--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 		<title>Javascript Essentials</title>
 	</head>
 	<body>
-		<select name="cssProperty" id="background">
+		<select name="cssBackground" id="background">
 			<option value="Green">Green</option>
 			<option value="Yellow">Yellow</option>
 			<option value="Red">Red</option>
 		</select>
 
-		<select name="cssProperty" id="width">
+		<select name="cssWidth" id="width">
 			<option value="100px">100px</option>
 			<option value="200px">200px</option>
 			<option value="300px">300px</option>
 		</select>
 
-		<select name="cssProperty" id="height">
+		<select name="cssHeight" id="height">
 			<option value="100px">100px</option>
 			<option value="200px">200px</option>
 			<option value="300px">300px</option>
@@ -31,5 +31,7 @@
 			id="modify"
 			style="width: 300px; height: 300px; background: blue"
 		></div>
+
+		<script src="js/changes.js"></script>
 	</body>
 </html>
