--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
 		<title>Javascript Essentials</title>
 	</head>
 	<body>
-		<select name="cssBackground" id="background">
+		<select name="cssProperty" id="background">
+			<option value="Green" selected="true">Blue</option>
 			<option value="Green">Green</option>
 			<option value="Yellow">Yellow</option>
 			<option value="Red">Red</option>
 		</select>
 
-		<select name="cssWidth" id="width">
+		<select name="cssProperty" id="width">
 			<option value="100px">100px</option>
 			<option value="200px">200px</option>
-			<option value="300px">300px</option>
+			<option value="300px" selected="true">300px</option>
 		</select>
 
-		<select name="cssHeight" id="height">
+		<select name="cssProperty" id="height">
 			<option value="100px">100px</option>
 			<option value="200px">200px</option>
-			<option value="300px">300px</option>
+			<option value="300px" selected="true">300px</option>
 		</select>
-
-		<button id="set">Set</button>
 
 		<br /><br />
 
